input check changes

--- a/todo.html
+++ b/todo.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todofy | Todo Planner</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-    <link rel="stylesheet" href="./style11.css" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -37,7 +37,7 @@
             </button>
     </form>
 
-    <script src="./class11.js"></script>
+    <script src="./todo.js"></script>
 </body>
 
 </html>
