--- a/todo.html
+++ b/todo.html
@@ -16,14 +16,30 @@
     </header>
 
     <div class="todo-container">
+
         <ul class="todo-list">
+            <!-- <h2 class="task-completed">All tasks has been completed</h2> -->
             <div class="todo">
                 <li class="todo-item">Make content for page</li>
+                <button class="edit"><i class="far fa-edit"></i></button>
                 <button class="check"><i class="fas fa-check"></i></button>
                 <button class="trash"><i class="fas fa-trash"></i></button>
             </div>
             <div class="todo">
                 <li class="todo-item">Pay credit card's bill</li>
+                <button class="edit"><i class="far fa-edit"></i></button>
+                <button class="check"><i class="fas fa-check"></i></button>
+                <button class="trash"><i class="fas fa-trash"></i></button>
+            </div>
+            <div class="todo">
+                <li class="todo-item">Medicine for Mom</li>
+                <button class="edit"><i class="far fa-edit"></i></button>
+                <button class="check"><i class="fas fa-check"></i></button>
+                <button class="trash"><i class="fas fa-trash"></i></button>
+            </div>
+            <div class="todo">
+                <li class="todo-item">Learn Javascript</li>
+                <button class="edit"><i class="far fa-edit"></i></button>
                 <button class="check"><i class="fas fa-check"></i></button>
                 <button class="trash"><i class="fas fa-trash"></i></button>
             </div>
