--- a/todo.html
+++ b/todo.html
@@ -31,18 +31,18 @@
                 <button class="check"><i class="fas fa-check"></i></button>
                 <button class="trash"><i class="fas fa-trash"></i></button>
             </div>
-            <div class="todo">
+            <!-- <div class="todo">
                 <li class="todo-item">Medicine for Mom</li>
                 <button class="edit"><i class="far fa-edit"></i></button>
                 <button class="check"><i class="fas fa-check"></i></button>
                 <button class="trash"><i class="fas fa-trash"></i></button>
-            </div>
-            <div class="todo">
+            </div> -->
+            <!-- <div class="todo">
                 <li class="todo-item">Learn Javascript</li>
                 <button class="edit"><i class="far fa-edit"></i></button>
                 <button class="check"><i class="fas fa-check"></i></button>
                 <button class="trash"><i class="fas fa-trash"></i></button>
-            </div>
+            </div> -->
         </ul>
     </div>
 
